--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "Test de wikipedia",
   "main": "index.js",
-  "scripts": {    
+  "scripts": {
     "start": "node src/index.js"
   },
   "author": "jromero",
@@ -12,6 +12,7 @@
     "cheerio": "^1.0.0-rc.5",
     "express": "^4.17.1",
     "request": "^2.88.2",
+    "string-similarity": "^4.0.4",
     "wikijs": "^6.0.1"
   },
   "devDependencies": {
